--- a/src/triamcinolone/main.rs.html
+++ b/src/triamcinolone/main.rs.html
@@ -53,7 +53,27 @@
 <span id="11">11</span>
 <span id="12">12</span>
 <span id="13">13</span>
+<span id="14">14</span>
+<span id="15">15</span>
+<span id="16">16</span>
+<span id="17">17</span>
+<span id="18">18</span>
+<span id="19">19</span>
+<span id="20">20</span>
+<span id="21">21</span>
+<span id="22">22</span>
+<span id="23">23</span>
+<span id="24">24</span>
+<span id="25">25</span>
+<span id="26">26</span>
+<span id="27">27</span>
+<span id="28">28</span>
+<span id="29">29</span>
+<span id="30">30</span>
+<span id="31">31</span>
 </pre><pre class='rust '>
+<span class='attribute'>#<span class='op'>!</span>[<span class='ident'>feature</span>(<span class='ident'>box_syntax</span>)]</span>
+
 <span class='kw'>use</span> <span class='ident'>lib</span>::{<span class='ident'>Messager</span>, <span class='ident'>Events</span>};
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>path</span>::<span class='ident'>Path</span>;
 
@@ -64,6 +84,22 @@
     <span class='ident'>im</span>.<span class='ident'>bootstrap</span>().<span class='ident'>ok</span>().<span class='ident'>expect</span>(<span class='string'>&quot;Bootstrap failure.&quot;</span>);
     <span class='ident'>im</span>.<span class='ident'>save</span>().<span class='ident'>err</span>().<span class='ident'>and_then</span>(<span class='op'>|</span><span class='ident'>err</span><span class='op'>|</span> <span class='prelude-val'>Some</span>(<span class='macro'>println</span><span class='macro'>!</span>(<span class='string'>&quot;Save profile failure. {}&quot;</span>, <span class='ident'>err</span>)));
     <span class='macro'>println</span><span class='macro'>!</span>(<span class='string'>&quot;{}: {}&quot;</span>, <span class='ident'>im</span>.<span class='ident'>core</span>.<span class='ident'>get_name</span>(), <span class='ident'>im</span>.<span class='ident'>core</span>.<span class='ident'>get_address</span>());
+
+<span class='comment'>/*
+ * WTF?
+ * Why can not I borrow `&amp;mut self`?
+    im.on(&quot;friend.request&quot;, box |tox, args| {
+        tox.core.add_friend_norequest(&amp;args.pk.unwrap()).unwrap();
+    });
+    im.on(&quot;group.invite.text&quot;, box |tox, args| {
+        tox.core.join_groupchat(args.peer.unwrap(), &amp;args.data.unwrap()).unwrap();
+    });
+    im.on(&quot;group.message&quot;, box |tox, args| {
+        if tox.core.group_peername(args.groupnum.unwrap(), args.peer.unwrap()).unwrap() != tox.core.get_name() {
+            tox.core.group_message_send(args.groupnum.unwrap(), &amp;args.message.unwrap()).unwrap();
+        };
+    });
+*/</span>
 
     <span class='ident'>im</span>.<span class='ident'>eloop</span>();
 }
