--- a/painting/index.html
+++ b/painting/index.html
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-0' class='srclink' href='../src/painting/lib.rs.html#1-258' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-0' class='srclink' href='../src/painting/lib.rs.html#1-272' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'><p>High-level API package is rstox</p>
 </div><h2 id='structs' class='section-header'><a href="#structs">Structs</a></h2>
 <table>
@@ -53,8 +53,7 @@
                         <td><a class='struct' href='struct.Arguments.html'
                                title='painting::Arguments'>Arguments</a></td>
                         <td class='docblock short'>
-                             <p>Event arguments
-XXX use impl Clone for Arguments {}</p>
+                             <p>Event arguments</p>
 
                         </td>
                     </tr>
@@ -82,8 +81,7 @@ XXX use impl Clone for Arguments {}</p>
                         <td><a class='trait' href='trait.Events.html'
                                title='painting::Events'>Events</a></td>
                         <td class='docblock short'>
-                             <p>Events loop</p>
-
+                             
                         </td>
                     </tr>
                 </table></section>
