--- a/painting/struct.Messager.html
+++ b/painting/struct.Messager.html
@@ -45,9 +45,10 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-144' class='srclink' href='../src/painting/lib.rs.html#72-79' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-17' class='srclink' href='../src/painting/lib.rs.html#32-39' title='goto source code'>[src]</a></span></h1>
 <pre class='rust struct'>pub struct Messager&lt;'e&gt; {
     pub core: <a class='struct' href='../rstox/core/struct.Tox.html' title='rstox::core::Tox'>Tox</a>,
+    pub config: <a class='type' href='../toml/type.Table.html' title='toml::Table'>Table</a>,
     pub owner: <a class='struct' href='../rstox/core/struct.PublicKey.html' title='rstox::core::PublicKey'>PublicKey</a>,
     // some fields omitted
 }</pre><div class='docblock'><p>Tox Messager.</p>
@@ -70,6 +71,7 @@
 </div><h2 class='fields'>Fields</h2>
 <table><tr class='stab '>
                                   <td id='structfield.core'><code>core</code></td><td></td></tr><tr class='stab '>
+                                  <td id='structfield.config'><code>config</code></td><td></td></tr><tr class='stab '>
                                   <td id='structfield.owner'><code>owner</code></td><td></td></tr></table><h2 id='methods'>Methods</h2><h3 class='impl'><code>impl&lt;'e&gt; <a class='struct' href='../painting/struct.Messager.html' title='painting::Messager'>Messager</a>&lt;'e&gt;</code></h3><div class='impl-items'><h4 id='method.new' class='method'><code>fn <a href='#method.new' class='fnname'>new</a>(path: &amp;<a class='struct' href='http://doc.rust-lang.org/nightly/std/path/struct.Path.html' title='std::path::Path'>Path</a>) -&gt; Self</code></h4>
 <div class='docblock'><p>New a Messager</p>
 </div><h4 id='method.bootstrap' class='method'><code>fn <a href='#method.bootstrap' class='fnname'>bootstrap</a>(&amp;mut self) -&gt; <a class='enum' href='http://doc.rust-lang.org/nightly/core/result/enum.Result.html' title='core::result::Result'>Result</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.tuple.html'>()</a>, <a class='enum' href='../rstox/core/errors/enum.BootstrapError.html' title='rstox::core::errors::BootstrapError'>BootstrapError</a>&gt;</code></h4>
@@ -77,7 +79,7 @@
 </div><h4 id='method.save' class='method'><code>fn <a href='#method.save' class='fnname'>save</a>(&amp;mut self) -&gt; <a class='enum' href='http://doc.rust-lang.org/nightly/core/result/enum.Result.html' title='core::result::Result'>Result</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.tuple.html'>()</a>, <a class='struct' href='http://doc.rust-lang.org/nightly/std/io/error/struct.Error.html' title='std::io::error::Error'>Error</a>&gt;</code></h4>
 <div class='docblock'><p>Save Tox profile</p>
 </div></div><h2 id='implementations'>Trait Implementations</h2><h3 class='impl'><code>impl&lt;'e&gt; <a class='trait' href='../painting/trait.Events.html' title='painting::Events'>Events</a>&lt;'e&gt; for <a class='struct' href='../painting/struct.Messager.html' title='painting::Messager'>Messager</a>&lt;'e&gt;</code></h3><div class='impl-items'><h4 id='method.on' class='method'><code>fn <a href='../painting/trait.Events.html#method.on' class='fnname'>on</a>(&amp;mut self, event: &amp;'e <a href='http://doc.rust-lang.org/nightly/std/primitive.str.html'>str</a>, foo: <a class='struct' href='http://doc.rust-lang.org/nightly/alloc/boxed/struct.Box.html' title='alloc::boxed::Box'>Box</a>&lt;<a class='trait' href='http://doc.rust-lang.org/nightly/core/ops/trait.Fn.html' title='core::ops::Fn'>Fn</a>(&amp;<a class='struct' href='../painting/struct.Messager.html' title='painting::Messager'>Messager</a>, <a class='struct' href='../painting/struct.Arguments.html' title='painting::Arguments'>Arguments</a>)&gt;)</code></h4>
-<h4 id='method.trigger' class='method'><code>fn <a href='../painting/trait.Events.html#method.trigger' class='fnname'>trigger</a>(&amp;mut self, event: &amp;<a href='http://doc.rust-lang.org/nightly/std/primitive.str.html'>str</a>, arguments: <a class='struct' href='../painting/struct.Arguments.html' title='painting::Arguments'>Arguments</a>) -&gt; <a class='enum' href='http://doc.rust-lang.org/nightly/core/result/enum.Result.html' title='core::result::Result'>Result</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.tuple.html'>()</a>, <a class='enum' href='../painting/enum.EventError.html' title='painting::EventError'>EventError</a>&gt;</code></h4>
+<h4 id='method.trigger' class='method'><code>fn <a href='../painting/trait.Events.html#method.trigger' class='fnname'>trigger</a>(&amp;self, event: &amp;<a href='http://doc.rust-lang.org/nightly/std/primitive.str.html'>str</a>, arguments: <a class='struct' href='../painting/struct.Arguments.html' title='painting::Arguments'>Arguments</a>) -&gt; <a class='enum' href='http://doc.rust-lang.org/nightly/core/result/enum.Result.html' title='core::result::Result'>Result</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.tuple.html'>()</a>, <a class='enum' href='../painting/enum.EventError.html' title='painting::EventError'>EventError</a>&gt;</code></h4>
 <h4 id='method.eloop' class='method'><code>fn <a href='../painting/trait.Events.html#method.eloop' class='fnname'>eloop</a>(&amp;mut self)</code></h4>
 </div></section>
     <section id='search' class="content hidden"></section>
