--- a/painting/struct.Arguments.html
+++ b/painting/struct.Arguments.html
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-368' class='srclink' href='../src/painting/lib.rs.html#121-140' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-749' class='srclink' href='../src/painting/lib.rs.html#201-220' title='goto source code'>[src]</a></span></h1>
 <pre class='rust struct'>pub struct Arguments {
     pub status: <a class='enum' href='http://doc.rust-lang.org/nightly/core/option/enum.Option.html' title='core::option::Option'>Option</a>&lt;<a class='enum' href='../rstox/core/enum.Connection.html' title='rstox::core::Connection'>Connection</a>&gt;,
     pub fnum: <a class='enum' href='http://doc.rust-lang.org/nightly/core/option/enum.Option.html' title='core::option::Option'>Option</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.u32.html'>u32</a>&gt;,
@@ -60,12 +60,12 @@
 
 <h1 id="examples" class='section-header'><a
                            href="#examples">Examples</a></h1><pre class='rust rust-example-rendered'>
-<span class='kw'>let</span> <span class='ident'>args</span> <span class='op'>=</span> <span class='ident'>Arguments</span> {
+<span class='kw'>let</span> <span class='ident'>args</span> <span class='op'>=</span> <span class='ident'>painting</span>::<span class='ident'>Arguments</span> {
     <span class='ident'>message</span>: <span class='prelude-val'>Some</span>(<span class='string'>&quot;Hello world!&quot;</span>.<span class='ident'>to_string</span>()),
     ..<span class='ident'>Default</span>::<span class='ident'>default</span>()
 };
 
-<span class='ident'>assert_eq</span>(<span class='ident'>args</span>.<span class='ident'>message</span>, <span class='prelude-val'>Some</span>(<span class='string'>&quot;Hello world!&quot;</span>.<span class='ident'>to_string</span>()));
+<span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>args</span>.<span class='ident'>message</span>, <span class='prelude-val'>Some</span>(<span class='string'>&quot;Hello world!&quot;</span>.<span class='ident'>to_string</span>()));
 </pre>
 </div><h2 class='fields'>Fields</h2>
 <table><tr class='stab '>
